@@ -1,2 +1,2 @@
 Display the package's README file from /usr/share/doc.
-$ wajig readme PKG                      (zcat /usr/share/doc/PKG/README.Debian.gz)
+$ wajig readme PKG                  (zcat /usr/share/doc/PKG/README.Debian.gz)
