@@ -36,7 +36,8 @@ wajig (2.0.50) unstable; urgency=low
   * INSTALL: accept -y|--yes option, an alias for apt-get's --assume-yes.
   * UPGRADE: accept -y|--yes option, too.
   * FIX-INSTALL: accept -n|--noauth option.
-  * FIX-MISSING: accept -n|--noauth option.
+  * FIX-MISSING: accept -n|--noauth option, too.
+  * REINSTALL:  accept -n|--noauth and -y|--yes option.
   * HELP: introduce the convenient "wajig HELP COMMAND" functionality.
   * Remove supression of error messages; Not a good idea.
   * Add dependency on aptitude; It must have been forgotten.
